# COP290Assignment4

./: 2025ANZ0000.tar
A4-Tester/: README.md  autograder.py  autograder_output.txt  generate_data.py
A4-Tester/results/: report.json
A4-Tester/results/test_data/: data.csv  data.parquet  null_data.csv
A4-Tester/results/test_outputs/test_advanced_join/: join_empty_inner.csv  join_outer.csv  join_right_nulls.csv  join_self.csv
A4-Tester/results/test_outputs/test_advanced_lazy/: lazy_full_pipeline.csv  lazy_predicate_push.csv  lazy_sort_head.csv
A4-Tester/results/test_outputs/test_chained_ops/: chain_filter_sort_head.csv  chain_multi_filter.csv  chain_select_wc.csv  chain_wc_filter_gb.csv
A4-Tester/results/test_outputs/test_edge_cases/: edge_double_sort.csv  edge_head_zero.csv  edge_replace_col.csv  edge_select_single.csv  edge_single_group.csv
A4-Tester/results/test_outputs/test_expressions/: expr_abs.csv  expr_arith_chain.csv  expr_bonus.csv  expr_complex_filter.csv
A4-Tester/results/test_outputs/test_from_columns/: fc_filter.csv  fc_select.csv  fc_simple.csv  fc_with_column.csv
A4-Tester/results/test_outputs/test_groupby_agg/: groupby_multi.csv  groupby_result.csv
A4-Tester/results/test_outputs/test_io/: io_csv_roundtrip.csv  io_parquet_roundtrip.parquet
A4-Tester/results/test_outputs/test_join/: join_inner.csv  join_left.csv  join_right.csv
A4-Tester/results/test_outputs/test_lazy/: lazy_chain.csv  lazy_explain.txt  lazy_filter.csv  lazy_groupby.csv  lazy_select.csv
A4-Tester/results/test_outputs/test_null_types/: is_not_null_result.csv  is_null_result.csv  null_arith.csv  null_filter_compute.csv
A4-Tester/results/test_outputs/test_operators/: ops_bool_combo.csv  ops_divide.csv  ops_greater_equal.csv  ops_less.csv  ops_less_equal.csv  ops_modulo.csv  ops_nested_arith.csv  ops_not.csv  ops_not_equal.csv  ops_subtract.csv
A4-Tester/results/test_outputs/test_performance/: perf_filter.csv  perf_groupby.csv  perf_lazy_chain.csv  perf_sort.csv
A4-Tester/results/test_outputs/test_select_filter/: filter_compound.csv  filter_eq.csv  filter_select.csv
A4-Tester/results/test_outputs/test_sort_head/: head_result.csv  sort_asc.csv  sort_desc.csv  sort_head.csv
A4-Tester/results/test_outputs/test_string_ops/: contains_result.csv  endswith_result.csv  length_result.csv  lower_result.csv  startswith_result.csv  upper_result.csv
A4-Tester/results/test_outputs/test_with_column/: wc_doubled.csv  wc_sum.csv
A4-Tester/results_new/test_data/: left.csv  right.csv  string_data.csv
A4-Tester/test_programs/: CMakeLists.txt  test_advanced_join.cpp  test_advanced_lazy.cpp  test_chained_ops.cpp  test_edge_cases.cpp  test_expressions.cpp  test_from_columns.cpp  test_groupby_agg.cpp  test_io.cpp  test_join.cpp  test_lazy.cpp  test_null_types.cpp  test_operators.cpp  test_performance.cpp  test_select_filter.cpp  test_sort_head.cpp  test_string_ops.cpp  test_with_column.cpp
project/: .gitignore  CMakeLists.txt  README.md  main.cpp  prepare_submission.sh  report.md  report.tex
project/include/: DataFrame.hpp  EagerDataFrame.hpp  Expr.hpp  IO.hpp  LazyDataFrame.hpp  LogicalPlan.hpp  QueryOptimizer.hpp  TypeUtils.hpp
project/include/dataframelib/: dataframelib.h
project/src/: EagerDataFrame.cpp  Expr.cpp  IO.cpp  LazyDataFrame.cpp  LogicalPlan.cpp  QueryOptimizer.cpp  TypeUtils.cpp
project/src/internal/: arx.hpp  arx_table.hpp  expr_walk.cpp  expr_walk.hpp
project/tests/: CMakeLists.txt  test_main.cpp
